--- a/src/components/community/aq-announcement-card.html
+++ b/src/components/community/aq-announcement-card.html
@@ -1,53 +1,48 @@
 <!--link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"-->
 <dom-module id="aq-announcement-card">
+    <style>
+        :host{
+            display: inline-block;
+        }
+        .container{
+            width: var(--aq-announcement-card-width , 100%);
+            --display: flex;
+            --justify-content: flex-start;
+            --padding: 10px 10px;
+            box-shadow: 0 3px 8px rgba(0,0,0,0.3);
+            border-radius: 2px;
+            --flex-direction: column;
+            background-color: #fff;
+        }
+        polymer-quill-html-render {
+            --margin-top: 5px;
+            --margin-bottom: 15px;
+            min-height: 100px;
+            font-size: 14px;
+            font-family: 'Lato', sans-serif;
+            color: black;
+            --padding-left: 10px;
+            --padding-right: 10px;
+            line-height: 20px;
+        }
+
+        .header {
+            padding: 20px;
+            padding-bottom: 0px;
+            font-size: 20px;
+            color: teal;
+            font-weight: bold;
+        }
+    </style>
     <template>
-        <style>
-            :host{
-                display: inline-block;
-            }
-            .container{
-                width: var(--aq-announcement-card-width , 100%);
-                display: flex;
-                justify-content: flex-start;
-                padding: 15px 20px;
-                box-shadow: 0 3px 8px rgba(0,0,0,0.3);
-                border-radius: 2px;
-                flex-direction: column;
-                background-color: #fff;
-            }
-            .header , .sub-header{
-                font-family: 'Lato' , sans-serif;
-            }
-            .header{
-                font-weight: 400;
-                font-size: 16px;
-                color:teal;
-            }
-            .sub-header{
-                font-weight: 700;
-                font-size: 14px;
-                margin-top: 13px;
-                color:#474747;
-            }
-            ::content p {
-                font-family: 'Lato' , sans-serif;
-                font-size: 14px;
-                line-height: 20px;
-                margin: 0; padding: 0;
-                margin-top: 13px;
-                font-weight: 400;
-                color:#686868;
-            }
-            h1,h3{
-                margin: 0;padding: 0;
-            }
-        </style>
         <div class="container">
-            <h1 class="header">{{header}}</h1>
-            <h3 class="sub-header">{{subHeader}}</h3>
-            <content class="content-wrapper"></content>
+            <div class="header">Announcement</div>
+            <polymer-quill-html-render 
+                content="[[announcement]]">
+            </polymer-quill-html-render>
         </div>
     </template>
+    
     <script>
         Polymer({
             is:"aq-announcement-card",
@@ -59,7 +54,8 @@
                 subHeader:{
                     type:String,
                     value:"This is the Sub Header"
-                }
+                },
+                announcement: String,
             }
         })
     </script>
