--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -82,6 +82,7 @@
                         heading="Attached Backtest Details"     
                         backtest-id="[[getBacktestId(postContent)]]"
                         can-clone=[[!preview]]
+                        forced-semi-wide
                         community>
                     </aq-backtest-detail-item>
                 </div>
