--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -15,6 +15,7 @@
 <link rel='import' href='./aq-backtest-metric-item-list.html'>
 <link rel='import' href='./aq-backtest-performance-detail-item.html'>
 
+<link rel='import' href='../aq-settings-display.html'>
 <link rel="import" href="../aq-log-item-new.html">
 <link rel="import" href="../aq-transaction-table.html">
 <link rel="import" href="../aq-portfolio-table.html">
@@ -165,6 +166,8 @@
                                 
                                 <paper-tab>Code</paper-tab>
 
+                                <paper-tab>Settings</paper-tab>
+
                                 <template is='dom-if' if=[[!community]]>
                                     <template is='dom-if' if='[[hasBacktestLogs(backtest)]]'>
                                         <paper-tab>Logs</paper-tab>
@@ -177,6 +180,7 @@
                                     <template is='dom-if' if='[[hasBacktestTransactions(backtest)]]'>
                                         <paper-tab>Transactions</paper-tab>
                                     </template>
+
                                 </template>
                             </paper-tabs>
                         </div>
@@ -185,9 +189,9 @@
                     <iron-pages selected="{{detailType}}">
                         <div id="performance-container">
                             <aq-backtest-performance-detail-item
-                                    active="[[active]]"
-                                    error="[[internalError]]"
-                                    backtest="[[backtest]]">
+                                active="[[active]]"
+                                error="[[internalError]]"
+                                backtest="[[backtest]]">
                             </aq-backtest-performance-detail-item>
                         </div>
                         
@@ -196,18 +200,25 @@
                             </juicy-ace-editor>
                         </div>
 
+                        <div id='settings-container'>
+                            <template is='dom-if' if='[[back testSettings]]'>
+                                <aq-settings-display settings="[[backtestSettings]]">
+                                </aq-settings-display>
+                            </template>
+                        </div>
+
                         <div id="log-container">
 
-                        <template is='dom-if' if='[[!isValid(backtestLogs)]]'>
-                           <div class="layout vertical">
-                                <div class="flex"></div>
-                                <paper-spinner 
-                                    alt="Loading logs..." 
-                                    active class="self-center">
-                                </paper-spinner>
-                                <div class="flex"></div>
-                            </div>
-                        </template>
+                            <template is='dom-if' if='[[!isValid(backtestLogs)]]'>
+                               <div class="layout vertical">
+                                    <div class="flex"></div>
+                                    <paper-spinner 
+                                        alt="Loading logs..." 
+                                        active class="self-center">
+                                    </paper-spinner>
+                                    <div class="flex"></div>
+                                </div>
+                            </template>
 
                             <template is='dom-if' if='[[backtestLogs]]'>
                                 <template is='dom-repeat' items="[[backtestLogs]]">
@@ -242,16 +253,16 @@
 
                         <div id="transaction-container">
                             
-                    <template is='dom-if' if='[[!isValid(backtestTransactions)]]'>
-                        <div class="layout vertical">
-                                <div class="flex"></div>
-                                <paper-spinner 
-                                    alt="Loading Transactions..." 
-                                    active class="self-center">
-                                </paper-spinner>
-                                <div class="flex"></div>
-                            </div>
-                    </template>
+                            <template is='dom-if' if='[[!isValid(backtestTransactions)]]'>
+                                <div class="layout vertical">
+                                    <div class="flex"></div>
+                                    <paper-spinner 
+                                        alt="Loading Transactions..." 
+                                        active class="self-center">
+                                    </paper-spinner>
+                                    <div class="flex"></div>
+                                </div>
+                            </template>
 
                              <template is='dom-if' if='[[backtestTransactions]]'>
                                 <aq-transaction-table 
@@ -260,7 +271,7 @@
                                 </aq-transaction-table>
                             </template>
                         </div>
-                       
+
                     </iron-pages>
                 </div>
             </div>
@@ -389,7 +400,9 @@
                 showFull: {
                     type:Boolean,
                     value: false,
-                }
+                },
+
+                backtestSettings: Array,
             },
 
             listeners: {
@@ -684,7 +697,7 @@
             },
 
             onGetBacktestError: function (e) {
-                console.log(e);
+                this.fire('ajax-error', {response: e.detail.request.response});
             },
 
             requestSpecializedData: function(select) {
@@ -822,6 +835,55 @@
                 }
             },
 
+            computeSettings: function() {
+                
+                if(!this.backtestSettings || this.backtestSettings.length == 0) {
+                    var basicSettings = [];
+                    var brokerageSettings = [];
+                    var otherSettings = [];
+                    var settings = [];
+
+                    var allSettings = this.backtest.settings;
+                    var advancedSettings = JSON.parse(this.backtest.settings.advanced);
+
+                    basicSettings.push({label:"Initial Cash", value:allSettings["initialCash"], value2:""});
+
+                    if(advancedSettings.slippage) {
+                        brokerageSettings.push({label:"Slippage", value:advancedSettings.slippage.value, value2:advancedSettings.slippage.model});
+                    }
+
+                    if(advancedSettings.commission) {
+                        brokerageSettings.push({label:"Commission", value:advancedSettings.commission.value, value2:advancedSettings.commission.model});
+                    }
+
+                    if(advancedSettings.cancelPolicy) {
+                        brokerageSettings.push({label:"Cancel Policy", value2:advancedSettings.cancelPolicy, value:""});
+                    }
+
+                    if(advancedSettings.executionPolicy) {
+                        otherSettings.push({label: "Execution Policy", value2: advancedSettings.executionPolicy, value:""});
+                    }
+
+                    if(advancedSettings.rebalance) {
+                        otherSettings.push({label: "Rebalance", value2: advancedSettings.rebalance, value:""});
+                    }
+
+                    if(advancedSettings.resolution) {
+                        otherSettings.push({label: "Resolution", value2: advancedSettings.resolution, value:""});
+                    }
+
+                    if(advancedSettings.investmentPlan) {
+                        otherSettings.push({label: "Investment Plan", value2: advancedSettings.investmentPlan, value:""});
+                    }
+                    
+                    settings = settings.concat(basicSettings).concat(brokerageSettings).concat(otherSettings);
+                      
+                    if(settings.length > 0){
+                        this.backtestSettings = settings;
+                    }
+                }            
+            },
+
             addMetricData: function (data) {
                 this.metrics = [{
                     "metricName": "Total Return",
@@ -877,17 +939,22 @@
 
             _detailTypeChanged: function() {
                 //return;
-                if(this.detailType == 3) {
+                if(this.detailType == 4) {
                     this.computePortfolio();
                 }
 
-                if(this.detailType == 4 ) {
+                if(this.detailType == 5 ) {
                     this.computeTransactions();
                 }
 
-                if(this.detailType == 2) {
+                if(this.detailType == 3) {
                     this.computeLogs();
                 }
+
+                if(this.detailType == 2) {
+                    this.computeSettings();
+                }
+
             },
 
             hasBacktestPositions: function(backtest){
@@ -932,10 +999,12 @@
             populateTab: function() {
                 if(this.backtest) {
                     if(this.detailType == 2) {
-                        this.computeLogs();
+                        this.computeSettings();
                     } else if(this.detailType == 3) {
-                        this.computePortfolio();
+                        this.computeLogs();
                     } else if(this.detailType == 4) {
+                        this.computePortfolio();
+                    } else if(this.detailType == 5) {
                         this.computeTransactions();
                     } 
                 }
