--- a/src/components/common/backtest/aq-backtest-summary-element.html
+++ b/src/components/common/backtest/aq-backtest-summary-element.html
@@ -249,8 +249,8 @@
                     }
 
                     if(this.compareItems.length > 0) {
-                        var indexArray = this.compareItems.map(function(x) {return x.index;})
-                        var backtests = this.compareItems.map(function(x) {return x.backtest;});
+                        var indexArray = this.compareItems.map(x => "Backtest "+x.index);
+                        var backtests = this.compareItems.map(x => x.backtest);
 
                         this.resetYearsMonths(backtests);
 
@@ -392,9 +392,9 @@
                 var grid = this.$$('vaadin-grid');
                 var element = this;
 
-                var indexArray = this.compareItems.map(function(x) {return x.index;})
+                var indexArray = this.compareItems.map(x=>"Backtest "+x.index);
                 
-                var backtests = this.compareItems.map(function(x) {return x.backtest;});
+                var backtests = this.compareItems.map(x=>x.backtest);
 
                 this.computeYearMonth();
 
